--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
@@ -16,10 +16,10 @@
 </head>
 <body>
 
- <h1>Learn to code by watching others</h1> 
+ <h1>Learn to code by watching others 
 
-  <h2>see how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-    but understanding how developers think is invaluable.</h2>  
+  <p>see how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+    but understanding how developers think is invaluable.</p></h1>
 
 
 <section>
@@ -53,6 +53,6 @@
     </p>
   </footer>
 
-  <script> src="main.js" </script>
+  <script> src="./js/main.js" </script>
 </body>
 </html>
