ajuste no designer

--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
 
   <form class="formulario">
 
-    <p> <input type="text"></p>
-    <label>First Name</label>  
-    <p><input type="text"></p>
-    <label>Last Name</label> 
-    <p><input type="email"></p>
-    <label>Email Address</label>
-    <p><input type="password"></p>
-    <label>Password</label>
+    <p> <input type="text" PlaceHolder="First Nome" required></p>
+    <div id="descricao">First Name</div>  
+    <p><input type="text"  PlaceHolder="Last Name" required></p>
+    <div id="descricao">Last Name</div> 
+    <p><input type="email" PlaceHolder="Email" required></p>
+    <div id="descricao">Email Address</div>
+    <p><input type="password" placeholder="Password" required></p>
+    <div id="descricao">Password</div>
 
     <br>
     <input type="button" class="botao" value="Claim your free trial"></button>
+    <br>
+    <br>
+   <h4>By clicking the button, you are agreeing to our <span id="termo">Terms and Services</span></h4>  
 
     </form>
     
-    By clicking the button, you are agreeing to our Terms and Services
 
 </section>
 
