--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <h3>Try it free 7 days then $20/mo. thereafter</h3>  
 
-  <form class="formulario">
+  <form class="formulario" id="formulario">
 
     <p> <input type="text" PlaceHolder="First Nome" required></p>
     <div id="descricao">First Name</div>  
@@ -38,7 +38,7 @@
     <div id="descricao">Password</div>
 
     <br>
-    <input type="button" class="botao" value="Claim your free trial"></button>
+    <input type="submit" id="botao" value="Claim your free trial"></button>
     <br>
     <br>
    <h4>By clicking the button, you are agreeing to our <span id="termo">Terms and Services</span></h4>  
@@ -51,10 +51,11 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Wanderson Alves Vieira</a>.
     </p>
   </footer>
 
-  <script> src="./js/main.js" </script>
+ <script src="js/main.js"></script>
+  
 </body>
 </html>
