--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <form class="formulario" id="formulario">
 
     <p> <input type="text" PlaceHolder="First Nome" required></p>
-    <div id="descricao">First Name</div>  
+    <div id="descricao1"></div>  
     <p><input type="text"  PlaceHolder="Last Name" required></p>
-    <div id="descricao">Last Name</div> 
+    <div id="descricao2"></div> 
     <p><input type="email" PlaceHolder="Email" required></p>
-    <div id="descricao">Email Address</div>
+    <div id="descricao3"></div>
     <p><input type="password" placeholder="Password" required></p>
-    <div id="descricao">Password</div>
+    <div id="descricao4"></div>
 
     <br>
     <input type="submit" id="botao" value="Claim your free trial"></button>
